# autospec

./: .gitignore  LICENSE  README.md  __main__.py  autospec.py  prepare.py  program.md  pyproject.toml
specs/: AcceptRejectGate.cfg  AcceptRejectGate.tla  BankTransfer.cfg  BankTransfer.tla  FileSandbox.cfg  FileSandbox.tla  IntegrityCheck.cfg  IntegrityCheck.tla  KnowledgeGraph.cfg  KnowledgeGraph.tla
tests/: test_autospec.py  test_prepare.py
